--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -1,8 +1,8 @@
 body {
     font-family : monospace ;
     font-size : 100% ;
-    background-color : white ;
-    color : #111 ;
+    background-color : #000 ;
+    color : #ffffff ;
     width : 80% ;
     min-width : 400px ;
     min-height : 200px ;
@@ -36,3 +36,14 @@ pre {
     margin-bottom : 1em ;
     margin-top : 1em ;
 }
+
+#c {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    z-index: -10;
+    border: none;
+    /* pointer-events: none; */
+ }
