--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -1,16 +1,40 @@
 body {
-    font-family : monospace ;
+    font-family: "Covered By Your Grace", serif;
+    font-weight: 400;
+    font-style: normal;
     font-size : 100% ;
-    background-color : #000 ;
+    background-color : #111 ;
     color : #ffffff ;
-    width : 80% ;
+    /* width : 80% ; */
     min-width : 400px ;
     min-height : 200px ;
     padding : 1em ;
     margin : 5% 10% ;
-    border : thin solid gray ;
-    border-radius : 5px ;
+    /* border : thin solid gray ;
+    border-radius : 5px ; */
     display : block ;
+}
+
+#bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    border: none;
+    width: 100%;
+    height: 100%;
+    z-index: -11;
+    background: radial-gradient(circle, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.5) 100%);
+}
+
+hgroup {
+    height: 500px;
+    width: 100%;
+    text-align: center;
+    font-size: 50pt;
+    color: #ccd;
+    backdrop-filter: blur(5px);
+    border: solid 10px #333;
+    border-radius: 5px;
 }
 
 a:link    { color : blue ; text-decoration : none ;      }
