--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -38,7 +38,7 @@
       {% endif %}
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=Rubik+Mono+One&display=swap" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/style.css" />
     {% endblock head %}
   </head>
@@ -79,7 +79,7 @@
          "imports": {
             "three": "https://unpkg.com/three@0.171.0/build/three.module.js",
             "three/addons/": "https://unpkg.com/three@0.171.0/examples/jsm/",
-            "gsap": "https://unpkg.com/gsap@3.12.5/dist/gsap.js"
+            "gsap": "https://unpkg.com/gsap@3.12.5/all.js"
          }
       }
    </script>
