--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -1,9 +1,13 @@
+html {
+    height: 100%;
+}
+
 body {
     font-family: "Covered By Your Grace", serif;
     font-weight: 400;
     font-style: normal;
     font-size : 100% ;
-    background-color : #111 ;
+    background-color : #999 ;
     color: #ccd;
     /* width : 80% ; */
     min-width : 400px ;
@@ -14,6 +18,7 @@ body {
     /* border : thin solid gray ;
     border-radius : 5px ; */
     display : block ;
+    height: 100%;
 }
 
 #bg {
@@ -28,7 +33,7 @@ body {
 }
 
 hgroup {
-    height: max(100%, 500px);
+    height: 100vh;
     width: 100%;
     font-size: 50pt;
     color: #ccd;
@@ -37,6 +42,8 @@ hgroup {
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
+    /* mask: radial-gradient(circle, rgba(1, 1, 1, 1) 50%, rgba(0, 0, 0, 0) 100%); */
 }
 
 nav {
@@ -69,6 +76,7 @@ a:hover   {
 
 h1 {
     margin: 0px;
+    font-size: 15vw;
 }
 
 nav ul {
