--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -86,6 +86,26 @@ body > main {
     color: var(--dark-color);
 }
 
+body > main::before,
+body > main::after {
+	content: '';
+	display: block;
+	position: sticky;
+	left: 0em;
+	right: 0em;
+	height: 0.75rem;
+}
+
+body > main::before {
+	top: 0;
+	background: radial-gradient(farthest-side at 50% 0, rgb(0 0 0 / 0.25), rgb(0 0 0 / 0));
+}
+
+body > main::after {
+	bottom: 0;
+	background: radial-gradient(farthest-side at 50% 100%, rgb(0 0 0 / 0.25), rgb(0 0 0 / 0));
+}
+
 body > footer {
     text-align: center;
     padding: 1em;
