--- a/theme/static/css/index.css
+++ b/theme/static/css/index.css
@@ -1,3 +1,5 @@
+@import 'list_page_styles.css';
+
 #c {
     position: fixed;
     width: 100%;
@@ -9,27 +11,45 @@
     /* pointer-events: none; */
     /* mask: linear-gradient(rgba(1, 1, 1, 1) var(--CanvasFadeStart), rgba(0, 0, 0, 0) 100%); */
     animation: scrollHomeCanvas 1s linear 1 calc(var(--scroll) * -1s) both paused;
- }
+}
 
- @keyframes scrollHomeCanvas {
+@keyframes scrollHomeCanvas {
     0% {
         height: 100%;
         z-index: 1;
     }
-    30% {
+    30%, 100% {
         height: 25vh;
         z-index: 1;
     }
-    100% {
-        height: 25vh;
-        z-index: 1;
-    }
- }
+}
 
- header#top_header {
+svg#head_svg {
+    position: fixed;
+    width: 100vw;
+    height: 80vh;
+    animation: scrollHomeHeadSVG 1s linear 1 calc(var(--scroll) * -1s) both paused;
+}
+
+@keyframes scrollHomeHeadSVG {
+    0% {
+        top: -10vh;
+        width: 100vw;
+        height: 80vh;
+        opacity: 0.2;
+    }
+    30%, 100% {
+        width: 3vw;
+        height: 3vh;
+        opacity: 1;
+    }
+}
+
+header#top_header {
     height: 100vh;
     backdrop-filter: grayscale(90%) blur(10px) brightness(10%);
     background-color: rgba(from var(--heading-background) r g b / 0);
+    mask-image: linear-gradient(rgba(from var(--heading-background) r g b / 1.0) 80%, rgba(from var(--heading-background) r g b / 0) 100%);
     animation: scrollHomeHeader 1s linear 1 calc(var(--scroll) * -1s) both paused;
 }
 
@@ -53,12 +73,7 @@ header#top_header hgroup h1 {
         backdrop-filter: grayscale(45%) blur(3px) brightness(100%);
         background-color: rgba(from var(--heading-background) r g b / 0.1);
     }
-    30% {
-        backdrop-filter: grayscale(0%) blur(0px) brightness(100%);
-        height: 5vh;
-        background-color: rgba(from var(--heading-background) r g b / 1.0);
-    }
-    100% {
+    30%, 100% {
         backdrop-filter: grayscale(0%) blur(0px) brightness(100%);
         height: 5vh;
         background-color: rgba(from var(--heading-background) r g b / 1.0);
@@ -70,11 +85,7 @@ header#top_header hgroup h1 {
         padding-top: 10vh;
         transform: translateX(0vw);
     }
-    30% {
-        padding-top: 2vh;
-        transform: translateX(-40vw);
-    }
-    100% {
+    30%, 100% {
         padding-top: 2vh;
         transform: translateX(-40vw);
     }
@@ -84,10 +95,7 @@ header#top_header hgroup h1 {
     0% {
         font-size: 15vw;
     }
-    30% {
-        font-size: max(2vw, 1.2em);
-    }
-    100% {
+    30%, 100% {
         font-size: max(2vw, 1.2em);
     }
 }
@@ -104,12 +112,7 @@ header#top_header > nav {
         transform: translateY(0vh);
         font-size: 4vh;
     }
-    30% {
-        padding-top: 0vh;
-        transform: translateY(-2.5vh);
-        font-size: 2vh;
-    }
-    100% {
+    30%, 100% {
         padding-top: 0vh;
         transform: translateY(-2.5vh);
         font-size: 2vh;
@@ -117,45 +120,22 @@ header#top_header > nav {
 }
 
 body > main {
-    padding: 10 0;
     position: fixed;
     top: 101vh;
     left: 0;
     animation: scrollHomeMain 1s linear 1 calc(var(--scroll) * -1s) both paused;
 }
 
+body > main > h2 {
+    margin: -1.1em 0 0.5em 0;
+}
+
 @keyframes scrollHomeMain {
     0% {
         top: 101vh;
     }
-    30% {
+    30%, 100% {
         top: 26vh;
         transform: translateY(0vh);
     }
-    100% {
-        top: 26vh;
-        transform: translateY(-500vh);
-    }
-}
-body > main > article {
-    flex: 1 1 30vw;
-    width: 30vw;
-    transition: all 0.5s ease-in-out;
-	/* animation: linear articleReveal both; */
-}
-
-body > main > article:hover {
-    transform: scale(1.1) rotateX(5deg) rotateY(5deg);
-    /* animation: hoverArticle 0.5s ease-in-out infinite alternate; */
-}
-
-@keyframes articleReveal {
-	from {
-		opacity: 0;
-		clip-path: inset(45% 20% 45% 20%);
-	}
-	to {
-		opacity: 1;
-		clip-path: inset(0% 0% 0% 0%);
-	}
 }
