--- a/theme/templates/category.html
+++ b/theme/templates/category.html
@@ -2,13 +2,17 @@
 
 {% block title %}{{ SITENAME|striptags }} - {{ category }} category{% endblock %}
 
+{% block extra_head %}
+        <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/list_page_styles.css" />
+{% endblock %}
+
 {% block content %}
     {% block content_title %}
-        <h2>Articles in the {{ category }} category</h2>
+        <h2>{{ category }}</h2>
     {% endblock %}
 
 {% for article in articles_page.object_list %}
-        <article>
+        <article class="list-article">
             <header> <h2><a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark" title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a></h2> </header>
             <section>{{ article.summary }}</section>
             <footer>
