--- a/theme/static/css/index.css
+++ b/theme/static/css/index.css
@@ -24,8 +24,7 @@
     }
 }
 
-svg#head_svg {
-    position: fixed;
+div#head_svg_container {
     width: 100vw;
     height: 80vh;
     animation: scrollHomeHeadSVG 1s linear 1 calc(var(--scroll) * -1s) both paused;
@@ -39,6 +38,7 @@ svg#head_svg {
         opacity: 0.2;
     }
     30%, 100% {
+        top: 2.2vh;
         width: 3vw;
         height: 3vh;
         opacity: 1;
