--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -38,7 +38,7 @@
       {% endif %}
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=League+Gothic&family=Rubik+Mono+One&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=League+Gothic&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Rubik+Mono+One&display=swap" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/style.css" />
       {% block extra_head %}
       {% endblock %}
@@ -47,7 +47,7 @@
 
   <body>
     <header id="top_header">
-      <hgroup><h1><a href="{{ SITEURL }}/">{{ SITENAME }}</a></h1>{% if SITESUBTITLE %}<p>{{ SITESUBTITLE }}</p>{% endif %}
+      <hgroup><a href="{{ SITEURL }}/"><h1>{{ SITENAME }}</h1>{% if SITESUBTITLE %}<p>{{ SITESUBTITLE }}</p>{% endif %}
       <div id="head_svg_container"> 
       <svg
    width="85mm"
@@ -69,7 +69,7 @@
        d="m 20.744943,64.190184 4.843154,6.874809 4.686197,-2.493013 c 0.495795,0.337979 0.990143,0.612934 1.483039,0.824854 0.492897,0.211921 0.984335,0.360827 1.474334,0.4467 L 34.287299,75 l 8.300804,-0.654324 0.172196,-5.242569 c 0.541835,-0.206339 1.043311,-0.46997 1.504427,-0.790892 0.461116,-0.320913 0.881871,-0.699128 1.26227,-1.134624 l 5.015356,1.63223 L 54,61.280688 49.486005,58.531122 c 0.0864,-0.487026 0.113701,-0.996957 0.08193,-1.529807 -0.03178,-0.53284 -0.122653,-1.088597 -0.272606,-1.667268 l 3.959726,-3.524231 -4.843154,-6.87481 -4.686197,2.49301 C 43.229902,47.090046 42.735555,46.815095 42.242667,46.603165 41.749761,46.39125 41.258322,46.242343 40.768333,46.156463 L 39.712701,41 l -8.300804,0.65432 -0.172204,5.242578 c -0.541835,0.20634 -1.043311,0.46997 -1.504427,0.79089 -0.461116,0.320919 -0.881871,0.699131 -1.26227,1.134629 L 23.457648,47.190181 20,54.71931 l 4.513995,2.74957 c -0.0864,0.487024 -0.113709,0.996959 -0.08193,1.529802 0.03178,0.532853 0.122645,1.088605 0.272606,1.667276 z m 11.067501,-2.57984 c -1.008991,-1.432245 -1.362287,-3.000668 -1.05989,-4.705257 0.302398,-1.704587 1.174088,-3.058316 2.615078,-4.061191 1.440981,-1.00287 3.018972,-1.354028 4.733965,-1.053469 1.714983,0.300566 3.076969,1.166976 4.08596,2.599228 1.008991,1.432251 1.362287,3.00067 1.059889,4.70526 -0.302405,1.70459 -1.174103,3.058322 -2.615085,4.061195 -1.44099,1.002873 -3.018973,1.354033 -4.733957,1.053469 -1.714983,-0.300574 -3.07697,-1.166979 -4.08596,-2.599235 z"
        style="transform-origin:37px 58px;"
        id="gear" /></g></svg>
-      </div>
+      </div></a>
       </hgroup>
       <nav><ul>
         {% for title, link in MENUITEMS %}
@@ -177,11 +177,10 @@
 </svg></div>
     </main>
     <footer>
+      Get ahold of me: <a href="https://calendly.com/owynrichen/30min">Schedule a meeting</a> or <a href="https://linkedin.com/in/owynrichen">via LinkedIn</a>
       <address>
         Proudly powered by <a rel="nofollow" href="https://getpelican.com/">Pelican</a>,
         which takes great advantage of <a rel="nofollow" href="https://www.python.org/">Python</a>.
-        https://calendly.com/owynrichen/30min
-
       </address>
     </footer>
     {% block extra_body %}
