--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -461,3 +461,40 @@ svg#planetary_gears g#planets g#planet3 {
         transform: translate(-33px,-24px) rotate(342deg);
     }
 }
+
+div#plane-container {
+    text-align: center;
+    width: 100%;
+}
+
+section#plane-details {
+    display: block;
+    position: absolute;
+    background-color: var(--body-background);
+    padding: 1em;
+    border-radius: 0.5em;
+    perspective: 1000px;
+    box-shadow: 0.2em 0.2em 5em 0 rgba(255,255,255,0.5), -0.2em -0.2em 5em 0 rgba(0,0,0,0.5);
+    font-size: 0.5em;
+    width: 150px;
+    bottom: 15px;
+    height: 90px;
+    right: 10px;
+    text-align: left;
+    opacity: 0;
+    z-index: 2;
+}
+
+section#plane-details > h1 {
+    text-align: left;
+    display: block;
+    font-size: 3em;
+    text-transform: uppercase;
+    font-family: "League Gothic", sans-serif;
+    margin: -0.25em 0em 0.25em 0em;
+}
+
+section#plane-details > p {
+    margin: 0;
+    line-height: 1.5em;
+}
