--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -498,3 +498,91 @@ section#plane-details > p {
     margin: 0;
     line-height: 1.5em;
 }
+
+.material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24
+}
+
+label {
+    font-family: "Covered by Your Grace", sans-serif;
+    color: var(--dark-color);
+    font-size: 1.2em;
+    font-weight: bold;
+    margin-bottom: 10px;
+    display: block;
+}
+
+input {
+    background-color: var(--light-accent);
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    box-sizing: border-box;
+    border-color: rgba(from var(--heading-background) r g b / 1.0);
+}
+
+input:hover {
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
+}
+
+input:focus {
+    border-color: var(--dark-color);
+}
+
+input[type="submit"] {
+    background-color: purple;
+    width: 180px;
+    display: block;
+    margin: 0px auto;
+    border: none;
+    border-radius: 5px;
+    font-weight: bold;
+    font-size: 1.2em;
+    font-family: "Covered by Your Grace", sans-serif;
+    color: white;
+    margin-top: 30px;
+    padding: 20px;
+    text-align: center;
+    cursor: pointer;
+}
+
+input[type="submit"]:hover {
+    background-color: indigo;
+}
+
+textarea {
+    background-color: var(--light-accent);
+    width: 100%;
+    height: 100px;
+    padding: 10px 0;
+    box-sizing: border-box;
+    border-radius: 4px;
+    color: var(--dark-color);
+}
+
+textarea:hover {
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
+}
+
+textarea:focus {
+    border-color: var(--dark-color);
+}
+
+select {
+    background-color: var(--light-accent);
+    width: 100%;
+    padding: 10px;
+    border-radius: 4px;
+}
+
+select:hover {
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
+}
+
+select:focus {
+    border-color: var(--dark-color);
+}
