--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -38,6 +38,7 @@
       {% endif %}
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=sync,sync_problem" />
       <link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=League+Gothic&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Rubik+Mono+One&display=swap" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/style.css" />
       {% block extra_head %}
