--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -89,7 +89,7 @@
         {% endif %}
       </ul></nav>
     </header>
-    <main>
+    <main id="main_content">
       {% block content %}
       {% endblock %}
       <div id="planetary_gears_container">
