--- a/theme/static/css/index.css
+++ b/theme/static/css/index.css
@@ -55,8 +55,8 @@ div#head_svg_container {
 header#top_header {
     height: 100vh;
     backdrop-filter: grayscale(90%) blur(10px) brightness(10%);
-    background-color: rgba(from var(--heading-background) r g b / 0);
-    mask-image: linear-gradient(rgba(from var(--heading-background) r g b / 1.0) 80%, rgba(from var(--heading-background) r g b / 0) 100%);
+    background-color: rgba(from var(--heading-background) r g b / 0.0);
+    mask-image: linear-gradient(rgba(from var(--heading-background) r g b / 0.6) 80%, rgba(from var(--heading-background) r g b / 0) 100%);
     animation: scrollHomeHeader 1s linear 1 calc(var(--scroll) * -1s) both paused;
 }
 
@@ -74,16 +74,19 @@ header#top_header hgroup h1 {
     0% {
         height: 100vh;
         backdrop-filter: grayscale(90%) blur(10px) brightness(10%);
-        background-color: rgba(from var(--heading-background) r g b / 0);
+        background-color: rgba(from var(--heading-background) r g b / 0.0);
+        mask-image: linear-gradient(rgba(from var(--heading-background) r g b / 0.6) 80%, rgba(from var(--heading-background) r g b / 0) 100%);
     }
     15% {
         backdrop-filter: grayscale(45%) blur(3px) brightness(100%);
         background-color: rgba(from var(--heading-background) r g b / 0.1);
+        mask-image: linear-gradient(rgba(from var(--heading-background) r g b / 0.6) 80%, rgba(from var(--heading-background) r g b / 0) 100%);
     }
     30%, 100% {
         backdrop-filter: grayscale(0%) blur(0px) brightness(100%);
         height: 5vh;
         background-color: rgba(from var(--heading-background) r g b / 1.0);
+        mask-image: linear-gradient(rgba(from var(--heading-background) r g b / 1.0) 80%, rgba(from var(--heading-background) r g b / 0) 100%);
     }
 }
 
@@ -138,11 +141,15 @@ body > main > h2 {
 }
 
 @keyframes scrollHomeMain {
-    0% {
+    0%, 10% {
         top: 101vh;
     }
-    30%, 100% {
+    50% {
         top: 26vh;
+        transform: translateY(0vh);
+    }
+    100% {
+        top: calc(-1 * var(--min-height));
         transform: translateY(0vh);
     }
 }
