--- a/theme/static/css/list_page_styles.css
+++ b/theme/static/css/list_page_styles.css
@@ -12,7 +12,7 @@ body > main > article.list-article {
 }
 
 @keyframes swing-in-bottom-fwd {
-    0% {
+    0%, 50% {
       transform: rotateX(100deg);
       transform-origin: bottom;
       opacity: 0;
