--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -1,3 +1,7 @@
+@import url(https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=sync,sync_problem);
+@import url(https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=League+Gothic&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Rubik+Mono+One&display=swap);
+@import 'codehilite.css';
+
 :root {
     --scroll: 0;
     --light-color: #ccd;
