--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -9,9 +9,6 @@
       {% if SITESUBTITLE %}
         <meta name="description" content="{{ SITESUBTITLE }}" />
       {% endif %}
-      {% if STYLESHEET_URL %}
-        <link rel="stylesheet" type="text/css" href="{{ STYLESHEET_URL }}" />
-      {% endif %}
       {% if FEED_ALL_ATOM %}
         <link href="{{ FEED_DOMAIN }}/{% if FEED_ALL_ATOM_URL %}{{ FEED_ALL_ATOM_URL }}{% else %}{{ FEED_ALL_ATOM }}{% endif %}" type="application/atom+xml" rel="alternate" title="{{ SITENAME|striptags }} Full Atom Feed" />
       {% endif %}
@@ -38,11 +35,8 @@
       {% endif %}
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=sync,sync_problem" />
-      <link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=League+Gothic&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Rubik+Mono+One&display=swap" rel="stylesheet">
-      <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/style.css" />
-      <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/codehilite.css" />
       {% block extra_head %}
+      <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/min/style.css" />
       {% endblock %}
     {% endblock head %}
   </head>
@@ -50,7 +44,7 @@
   <body>
     <header id="top_header">
       <hgroup><a href="{{ SITEURL }}/"><h1>{{ SITENAME }}</h1>{% if SITESUBTITLE %}<p>{{ SITESUBTITLE }}</p>{% endif %}
-      <div id="head_svg_container"> 
+      <div id="head_svg_container">
       <svg
    width="85mm"
    height="105mm"
@@ -119,7 +113,7 @@
        r="60.219433" />
   </g>
   <g
-    
+
      id="sun">
     <path
        style="fill:none;stroke:#000000;stroke-width:0.264583"
