optimizing the svgs with svgo

--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -43,5 +43,5 @@
             <p>Altitude: <span id="plane-altitude"></span></p>
         </section>
     </div>
-    <script type="module" src="{{ SITEURL }}/theme/js/packed.js"></script>
+    <script type="module" src="{{ SITEURL }}/theme/js/packed.js" defer="true"></script>
 {% endblock %}
