--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -36,7 +36,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       {% block extra_head %}
-      <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/min/style.css" />
+      <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/style.css" />
       {% endblock %}
     {% endblock head %}
   </head>
