removing the font download and embedding, re-adding minified and bundled code

--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "!simple/index.html" %}
 
 {% block extra_head %}
-    <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/style.css" />
-     <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/index.css" />
+    <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/min/style.css" />
+     <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/min/index.css" />
 {% endblock %}
 
 {% block content %}
@@ -44,7 +44,7 @@
             <p>Altitude: <span id="plane-altitude"></span></p>
         </section>
     </div>
-    <script type="importmap">
+    <!-- script type="importmap">
     {
         "imports": {
             "three": "https://unpkg.com/three@0.174.0/build/three.module.js",
@@ -52,6 +52,6 @@
             "gsap": "https://unpkg.com/gsap@3.12.5/all.js"
         }
     }
-    </script>
-    <script type="module" src="{{ SITEURL }}/theme/js/main.js" defer="true"></script>
+    </script -->
+    <script type="module" src="{{ SITEURL }}/theme/js/packed.js" defer="true"></script>
 {% endblock %}
